Fixed the images to not be stretched in a weird way, but instead use the same ratio always. Also made them be centered horizontally and vertically within their container.

--- a/htdocs/css/app.css
+++ b/htdocs/css/app.css
@@ -24,3 +24,22 @@ input[type=number]::-webkit-outer-spin-button {
 .editProductGroup {
     width: 110px;
 }
+
+.thumbnailImageContainer {
+    height: 150px;
+    margin-bottom: 12px;
+
+    position: relative;
+}
+
+    .thumbnailImageContainer img {
+        max-height: 150px;
+        max-width: 90%;
+        
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto  
+    }
